[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Graphics/DiceGraphics/Food/dice1.png" type="Texture" id=1]
[ext_resource path="res://GameScene/Objects/Tile.gd" type="Script" id=2]
[ext_resource path="res://Assets/Graphics/SlotSelection/notWorking.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/SlotSelection/yellowSlot.png" type="Texture" id=4]
[ext_resource path="res://Assets/Themes/NunitoBold80WithBorder.tres" type="Theme" id=5]
[ext_resource path="res://Assets/Themes/NunitoBold30.tres" type="Theme" id=6]
[ext_resource path="res://GameScene/Objects/NegativeImpact.gd" type="Script" id=7]

[node name="Tile" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="CrossOverlay" type="Sprite" parent="Sprite"]
visible = false
z_index = 1
z_as_relative = false
texture = ExtResource( 3 )
centered = false
offset = Vector2( -43, -92 )

[node name="SelectionOverlay" type="Sprite" parent="Sprite"]
z_index = 1
z_as_relative = false
texture = ExtResource( 4 )
centered = false
offset = Vector2( -50, -100 )

[node name="Multiplier" type="RichTextLabel" parent="Sprite"]
modulate = Color( 0.988235, 0.968627, 0.847059, 0.654902 )
margin_left = 8.0
margin_top = -38.0
margin_right = 45.0
margin_bottom = -5.0
theme = ExtResource( 6 )
scroll_active = false

[node name="Tween" type="Tween" parent="."]

[node name="NegativeImpact" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="NegativeImpactText" type="RichTextLabel" parent="NegativeImpact"]
modulate = Color( 0.988235, 0.968627, 0.847059, 0.654902 )
margin_left = -38.0
margin_top = -90.0
margin_right = 38.0
margin_bottom = -15.0
theme = ExtResource( 5 )
custom_colors/default_color = Color( 0.137255, 0.0941176, 0.109804, 1 )
scroll_active = false

[node name="PosTween" type="Tween" parent="NegativeImpact"]

[node name="AlphaTween" type="Tween" parent="NegativeImpact"]

[node name="StartAnchor" type="Node2D" parent="NegativeImpact"]
position = Vector2( 0, -43 )

[node name="EndAnchor" type="Node2D" parent="NegativeImpact"]
position = Vector2( 0, -146 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
